--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express-stormpath": "^2.3.7",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "node-fetch": "^1.3.3",
+    "quandl": "0.0.5",
+    "serve-favicon": "~2.3.0",
+    "watson-developer-cloud": "^1.2.1"
   }
 }
