--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "node-fetch": "^1.3.3",
+    "node-uber": "0.0.7",
     "quandl": "0.0.5",
     "serve-favicon": "~2.3.0",
     "watson-developer-cloud": "^1.2.1"
