--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "serve-favicon": "~2.3.0",
     "vo": "^1.0.3",
     "watson-developer-cloud": "^1.2.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "supertest": "^1.1.0"
   }
 }
