--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "express-stormpath": "^2.3.7",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.1",
     "morgan": "~1.6.1",
     "nightmare": "^2.1.6",
     "node-fetch": "^1.3.3",
